# HPCFinalProj

./: .gitignore  LICENSE  README.md
C++/: .gitignore  CMakeLists.txt  Makefile  baseline.cpp  error.cpp  error.py  error1.eps  error2.eps  heat_equation_parareal.cpp  heat_solver.cpp  heat_solver.h  pararea  parareal  parareal.cpp  parareal_OMP.cpp  parareal_mpi.cpp  parareal_naive.cpp  test.cpp  times.py  timing.eps
Matlab/: Crank_Nicol_FD.m  Heat1D_CN_solver.m  Heat1D_EE_solver.m  Heat1D_EM_solver.m  Heat1D_IE_solver.m  Heat1D_RK3_solver.m  RK2_FD.m  Spatial_Operator_Heat1D.m  parareal.m  parareal_conv.eps  parareal_naive.m  solver_animation.m  temp_conv_comparison.eps  testing_ground.m
Matlab/OLD_FILES/: EE_FD.m  Heat_1D.m  RK4_FD.m  parareal_naive.m  solver_animation.m
